Fix navigation font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -521,7 +521,7 @@ nav {
   font-family: moret, serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 15vh;
+  font-size: 22vw;
   line-height: 1em;
   margin: 0;
   padding: 0;
